name:           metrics-wai
version:        0.5.7
synopsis:       Metrics WAI integration
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2017 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
category:       Data
build-type:     Simple
cabal-version:  >= 1.10

library
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs:     src
    ghc-options:        -Wall -O2 -fwarn-tabs
    ghc-prof-options:   -auto-all

    exposed-modules:
        Data.Metrics.Middleware
        Data.Metrics.Types
        Data.Metrics.WaiRoute
        Data.Metrics.Servant

    build-depends:
          base         == 4.*
        , bytestring   >= 0.10
        , clock        >= 0.6
        , exceptions   >= 0.6
        , http-types   >= 0.8
        , imports
        , metrics-core >= 0.3
        , containers
        , text         >= 0.11
        , transformers >= 0.3
        , wai          >= 3
        , wai-route    >= 0.3
