cabal-version: 1.12
name:          metrics-wai
version:       0.5.7
synopsis:      Metrics WAI integration
category:      Data
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    Data.Metrics.Middleware
    Data.Metrics.Middleware.Prometheus
    Data.Metrics.Servant
    Data.Metrics.Test
    Data.Metrics.Types
    Data.Metrics.WaiRoute

  other-modules:      Paths_metrics_wai
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints

  ghc-prof-options:   -fprof-auto
  build-depends:
      base                       >=4    && <5
    , bytestring                 >=0.10
    , containers
    , http-types                 >=0.8
    , imports
    , metrics-core               >=0.3
    , servant
    , servant-multipart
    , string-conversions
    , text                       >=0.11
    , wai                        >=3
    , wai-middleware-prometheus
    , wai-route                  >=0.3
    , wai-routing

  default-language:   Haskell2010

test-suite unit
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_metrics_wai
    Test.Data.Metrics.TypesSpec

  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -threaded -with-rtsopts=-N -Wredundant-constraints

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      base                       >=4    && <5
    , bytestring                 >=0.10
    , containers
    , hspec
    , http-types                 >=0.8
    , imports
    , metrics-core               >=0.3
    , metrics-wai
    , servant
    , servant-multipart
    , string-conversions
    , text                       >=0.11
    , wai                        >=3
    , wai-middleware-prometheus
    , wai-route                  >=0.3
    , wai-routing

  default-language:   Haskell2010
