cabal-version: 1.12
name:          polysemy-wire-zoo
version:       0.1.0
synopsis:      Polysemy interface for various libraries
description:   Polysemy interface for various libraries
category:      Effects
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2020 Wire Swiss GmbH
license:       AGPL-3
build-type:    Simple

library
  exposed-modules:
    Polysemy.Testing
    Polysemy.TinyLog
    Wire.Sem.Concurrency
    Wire.Sem.Concurrency.IO
    Wire.Sem.Concurrency.Sequential
    Wire.Sem.FromUTC
    Wire.Sem.Logger
    Wire.Sem.Logger.Level
    Wire.Sem.Logger.TinyLog
    Wire.Sem.Now
    Wire.Sem.Now.Input
    Wire.Sem.Now.IO
    Wire.Sem.Now.Spec
    Wire.Sem.Paging
    Wire.Sem.Paging.Cassandra
    Wire.Sem.Random
    Wire.Sem.Random.IO

  other-modules:      Paths_polysemy_wire_zoo
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints

  build-depends:
      base             >=4.6 && <5.0
    , cassandra-util
    , HsOpenSSL
    , hspec
    , imports
    , polysemy
    , polysemy-check
    , polysemy-plugin
    , QuickCheck
    , saml2-web-sso
    , time
    , tinylog
    , types-common
    , unliftio
    , uuid
    , wire-api

  default-language:   Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_polysemy_wire_zoo
    Test.IntersperseSpec

  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -j
    -Wno-redundant-constraints -Werror -threaded -rtsopts
    -with-rtsopts=-N -Wredundant-constraints

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      base
    , containers
    , hspec
    , imports
    , polysemy
    , polysemy-check     >=0.9
    , polysemy-plugin
    , polysemy-wire-zoo
    , unliftio

  default-language:   Haskell2010
