cabal-version: 3.0
name:          saml2-web-sso
version:       0.20
synopsis:
  Library and example web app for the SAML Web-based SSO profile.

description:   See README.md
category:      System
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3.0-only
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    SAML2.Util
    SAML2.WebSSO
    SAML2.WebSSO.API
    SAML2.WebSSO.API.Example
    SAML2.WebSSO.API.UnvalidatedSAMLStatus
    SAML2.WebSSO.Config
    SAML2.WebSSO.Cookie
    SAML2.WebSSO.Error
    SAML2.WebSSO.Orphans
    SAML2.WebSSO.Servant
    SAML2.WebSSO.SP
    SAML2.WebSSO.Test.Arbitrary
    SAML2.WebSSO.Test.Lenses
    SAML2.WebSSO.Test.MockResponse
    SAML2.WebSSO.Test.Util
    SAML2.WebSSO.Test.Util.Misc
    SAML2.WebSSO.Test.Util.TestSP
    SAML2.WebSSO.Test.Util.Types
    SAML2.WebSSO.Test.Util.VendorCompatibility
    SAML2.WebSSO.Types
    SAML2.WebSSO.Types.Email
    SAML2.WebSSO.Types.TH
    SAML2.WebSSO.XML
    SAML2.WebSSO.XML.Hack
    Text.XML.DSig
    Text.XML.Util

  other-modules:      Paths_saml2_web_sso
  hs-source-dirs:     src
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    NoOverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -j -O2 -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wtabs -Werror

  build-depends:
    , aeson                 >=1.4.5.0
    , asn1-encoding         >=0.9.6
    , asn1-parse            >=0.9.5
    , asn1-types            >=0.3.3
    , base                  >=4.12.0.0
    , base64-bytestring     >=1.0.0.2
    , binary                >=0.8.6.0
    , bytestring            >=0.10.8.2
    , case-insensitive      >=1.2.1.0
    , containers            >=0.6.0.1
    , cookie                >=0.4.4
    , crypton               >=0.30
    , crypton-x509          >=1.7.5
    , data-default          >=0.7.1.1
    , directory             >=1.3.6.0
    , dns                   >=4.0.0
    , email-validate        >=2.3.2.12
    , errors                >=2.3.0
    , exceptions            >=0.10.3
    , extra                 >=1.6.18
    , file-path-th
    , filepath              >=1.4.2.1
    , foundation            >=0.0.25
    , ghc-prim              >=0.5.3
    , hedgehog              >=1.0.1
    , hedgehog-quickcheck   >=0.1.1
    , hourglass             >=0.2.12
    , hsaml2                >=0.1
    , hspec                 >=2.7.1
    , hspec-wai             >=0.9.0
    , http-media            >=0.8.0.0
    , http-types            >=0.12.3
    , hxt                   >=9.3.1.18
    , hxt-regex-xmlschema
    , imports
    , invertible-hxt
    , lens                  >=4.17.1
    , lens-datetime         >=0.3
    , memory                >=0.14.18
    , mtl                   >=2.2.2
    , network-uri           >=2.6.1.0
    , pretty-show           >=1.9.5
    , process               >=1.6.5.0
    , QuickCheck            >=2.13.2
    , quickcheck-instances  >=0.3.22
    , random                >=1.1
    , schema-profunctor
    , servant               >=0.16.2
    , servant-multipart     >=0.12
    , servant-server        >=0.16.2
    , shelly                >=1.8.1
    , silently              >=1.2.5.1
    , string-conversions    >=0.4.0.1
    , temporary             >=1.3
    , text                  >=1.2.3.1
    , time                  >=1.8.0.2
    , tinylog
    , transformers          >=0.5.6.2
    , types-common
    , uniplate              >=1.6.12
    , uri-bytestring        >=0.3.2.2
    , utf8-string
    , uuid                  >=1.3.13
    , wai                   >=3.2.2.1
    , wai-extra             >=3.0.28
    , warp                  >=3.2.28
    , word8                 >=0.1.3
    , xml-conduit           >=1.8.0.1
    , xml-conduit-writer    >=0.1.1.2
    , xml-hamlet            >=0.5.0.1
    , xml-types             >=0.3.6
    , yaml                  >=0.8.25.1

  default-language:   GHC2021

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_saml2_web_sso
    Samples
    Test.SAML2.UtilSpec
    Test.SAML2.WebSSO.APISpec
    Test.SAML2.WebSSO.ConfigSpec
    Test.SAML2.WebSSO.RoundtripSpec
    Test.SAML2.WebSSO.SPSpec
    Test.SAML2.WebSSO.XML.ExamplesSpec
    Test.SAML2.WebSSO.XML.MetaSpec
    Test.SAML2.WebSSO.XMLSpec
    Test.Text.XML.DSigSpec
    Test.Text.XML.UtilSpec

  hs-source-dirs:     test
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    NoOverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -j -O2 -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wtabs -Werror -threaded -rtsopts
    -with-rtsopts=-N

  build-depends:
    , aeson                 >=1.4.5.0
    , asn1-encoding         >=0.9.6
    , asn1-parse            >=0.9.5
    , asn1-types            >=0.3.3
    , base                  >=4.12.0.0
    , base64-bytestring     >=1.0.0.2
    , binary                >=0.8.6.0
    , bytestring            >=0.10.8.2
    , case-insensitive      >=1.2.1.0
    , containers            >=0.6.0.1
    , cookie                >=0.4.4
    , crypton               >=0.30
    , crypton-x509          >=1.7.5
    , data-default          >=0.7.1.1
    , directory             >=1.3.6.0
    , dns                   >=4.0.0
    , email-validate        >=2.3.2.12
    , errors                >=2.3.0
    , exceptions            >=0.10.3
    , extra                 >=1.6.18
    , filepath              >=1.4.2.1
    , foundation            >=0.0.25
    , ghc-prim              >=0.5.3
    , hedgehog
    , hedgehog-quickcheck   >=0.1.1
    , hourglass             >=0.2.12
    , hsaml2                >=0.1
    , hspec                 >=2.7.1
    , hspec-core
    , hspec-discover
    , hspec-wai             >=0.9.0
    , http-media            >=0.8.0.0
    , http-types            >=0.12.3
    , hxt                   >=9.3.1.18
    , imports
    , lens                  >=4.17.1
    , lens-datetime         >=0.3
    , memory                >=0.14.18
    , mtl                   >=2.2.2
    , network-uri           >=2.6.1.0
    , pretty-show
    , process               >=1.6.5.0
    , QuickCheck            >=2.13.2
    , quickcheck-instances  >=0.3.22
    , random                >=1.1
    , saml2-web-sso
    , servant               >=0.16.2
    , servant-multipart     >=0.12
    , servant-server        >=0.16.2
    , shelly                >=1.8.1
    , silently              >=1.2.5.1
    , string-conversions    >=0.4.0.1
    , temporary             >=1.3
    , text                  >=1.2.3.1
    , time                  >=1.8.0.2
    , tinylog
    , transformers          >=0.5.6.2
    , types-common
    , uniplate              >=1.6.12
    , uri-bytestring        >=0.3.2.2
    , uuid                  >=1.3.13
    , wai                   >=3.2.2.1
    , wai-extra             >=3.0.28
    , warp                  >=3.2.28
    , word8                 >=0.1.3
    , xml-conduit           >=1.8.0.1
    , xml-conduit-writer    >=0.1.1.2
    , xml-hamlet            >=0.5.0.1
    , xml-types             >=0.3.6
    , yaml                  >=0.8.25.1

  default-language:   GHC2021
